Bug 397356 - Ledger > Amount selection lost when switching windows
Summary: Ledger > Amount selection lost when switching windows
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 461685 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-08-11 03:45 UTC by Musikolo
Modified: 2022-11-12 06:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: master
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Musikolo 2018-08-11 03:45:45 UTC
Hi,

When I'm either entering a new transaction or editing one in the ledger, I find very annoying that the selection of the Amount field is lost when switching windows. So, when you enter the new amount, it gets appended after the existing one, instead of replacing it.

Steps to reproduce:
  1.- Create a new transaction in the ledger.
  2.- Fill up every field, moving to the next one by using the tab key.
  3.- When you are positioned in the Amount field, the default amount (0.00) is selected.
  4.- Ctrl+Tab to check your bank account in your browser or third party financial application.
  5.- Ctrl+Tab to come back to KMyMoney and enter the amount.
  6.- New value is appended after old one (0.00). The same applies when editing. You need to manually delete the old value, and then enter the new one.

Expected behavior:
  1.- Same as before.
  2.- Same as before.
  3.- Same as before.
  4.- Same as before.
  5.- Same as before.
  6.- Existing value keeps selected, so when entering the new amount, old amount is replaced with the new one.

Thanks your so much!
Comment 1 Thomas Baumgart 2022-11-12 06:06:22 UTC
*** Bug 461685 has been marked as a duplicate of this bug. ***
Comment 2 Thomas Baumgart 2022-11-12 06:08:07 UTC
Git commit f8b63dfd051c5c58c16cf4635ada010b77fcbec7 by Thomas Baumgart.
Committed on 12/11/2022 at 06:07.
Pushed by tbaumgart into branch 'master'.

Select text of amount when returning from other application
FIXED-IN: master

M  +1    -1    kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/commit/f8b63dfd051c5c58c16cf4635ada010b77fcbec7