Select text of amount when returning from other application

BUG: 397356
FIXED-IN: master